<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreyBg"
    android:fillViewport="true"
    android:scrollbars="none"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/margin_size_38dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/margin_size_38dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorGreyBg"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="@dimen/margin_size_60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/applogo"
        android:contentDescription="@string/app_name" />


    <com.example.ifarm.utils.CustomTextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="28sp"
        android:textColor="@color/colordarkestGrey"
        app:font_name="sfuidisplay_medium"
        android:layout_marginTop="@dimen/margin_size_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_size_48dp"
        android:gravity="center_vertical"
        app:hintEnabled="false"
        android:background="@drawable/edittext_bg"
        android:layout_marginTop="@dimen/margin_size_60dp"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center_vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/normal_edittext"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:focusableInTouchMode="true"
            android:hint="@string/email"
            android:imeOptions="actionDone"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_size_48dp"
        android:gravity="center_vertical"
        app:hintEnabled="false"
        android:layout_gravity="center_vertical"
        android:background="@drawable/edittext_bg"
        android:layout_marginTop="@dimen/margin_size_20dp"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/normal_edittext"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:focusableInTouchMode="true"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.example.ifarm.utils.CustomButton
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_fillbg"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_16sp"
        android:text="@string/login"
        app:font_name="sfuidisplay_bold"
        android:layout_marginTop="@dimen/margin_size_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword" />


    <com.example.ifarm.utils.CustomTextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OR"
        android:textColor="@color/colorEtText"
        android:textSize="@dimen/text_size_14sp"
        app:font_name="sfuidisplay_medium"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        android:layout_marginTop="@dimen/margin_size_60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/llSocialSighnup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_size_20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOr">

        <LinearLayout
            android:id="@+id/linearFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/margin_size_5dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook"
                android:contentDescription="@string/app_name" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearGoogle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/margin_size_5dp"
            android:layout_marginLeft="@dimen/margin_size_12dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/google"
                android:contentDescription="@string/app_name" />

        </LinearLayout>

    </LinearLayout>

    <com.example.ifarm.utils.CustomTextView
        android:id="@+id/tvSpanSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_26dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:textColor="@color/colorEtText"
        android:textSize="@dimen/text_size_16sp"
        app:font_name="sfuidisplay_regular"
        android:layout_marginBottom="@dimen/margin_size_50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llSocialSighnup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>